--- a/package.xml
+++ b/package.xml
@@ -8,6 +8,11 @@
   <license>MIT</license>
 
   <depend>python3-serial</depend>
+  <depend>python3-numpy</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
