--- a/neato_bringup/package.xml
+++ b/neato_bringup/package.xml
@@ -9,8 +9,8 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>neato_ros2_python/</depend>
-  <depend>neato_description/</depend>
+  <depend>neato_ros2_python</depend>
+  <depend>neato_description</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
