--- a/docker/docker-compose-robot.yml
+++ b/docker/docker-compose-robot.yml
@@ -6,7 +6,7 @@ services:
       context: ..
       dockerfile: docker/robot/Dockerfile
       args:
-        ROS_DISTRO: humble
+        ROS_DISTRO: jazzy
     # Interactive shell
     stdin_open: true
     tty: true
