Fix Setuptool deprecation warning:
--- stderr: neato_ros2_python
/usr/lib/python3/dist-packages/setuptools/dist.py:744: SetuptoolsDeprecationWarning: Invalid dash-separated options
!!

        ********************************************************************************
        Usage of dash-separated 'script-dir' will not be supported in future
        versions. Please use the underscore name 'script_dir' instead.

        This deprecation is overdue, please update your project and remove deprecated
        calls to avoid build errors in the future.

        See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html for details.
        ********************************************************************************

!!
  opt = self.warn_dash_deprecation(opt, section)
---

--- a/neato_ros2_python/setup.cfg
+++ b/neato_ros2_python/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/neato_ros2_python
+script_dir=$base/lib/neato_ros2_python
 [install]
-install-scripts=$base/lib/neato_ros2_python
+install_scripts=$base/lib/neato_ros2_python
