--- a/docker/docker-compose-robot.yml
+++ b/docker/docker-compose-robot.yml
@@ -11,7 +11,7 @@ services:
     stdin_open: true
     tty: true
     # Networking and IPC for ROS 2
-    network_mode: host
+    # network_mode: host
     ipc: host
     pid: host
     # Needed to display graphical applications
@@ -28,8 +28,27 @@ services:
       - ${XAUTHORITY:-$HOME/.Xauthority}:/root/.Xauthority
     devices:
       - /dev/ttyACM0
+    hostname: robot-host
+    domainname: test
+    networks:
+      network:
+        ipv4_address: 192.168.178.100
 
   # Launch
   bringup:
     extends: base
     command: ros2 launch neato_bringup neato.launch.py
+
+
+networks:
+  network:
+    driver: ipvlan
+    driver_opts:
+      parent: enu1u1u1
+      ipvlan-mode: l2
+    ipam:
+      driver: default
+      config:
+        - subnet: 192.168.178.0/24
+          gateway: 192.168.178.1
+          ip_range: 192.168.178.0/24
