--- a/docker/docker-compose-robot.yml
+++ b/docker/docker-compose-robot.yml
@@ -33,7 +33,7 @@ services:
     networks:
       network:
         ipv4_address: 192.168.178.100
-    command: ros2 launch neato_bringup neato.launch.py
+    # command: ros2 launch neato_bringup neato.launch.py
 
 
 networks:
