Configure docker-compose files with host names and using the right network interface in CycloneDDS

--- a/docker/docker-compose-operator.yml
+++ b/docker/docker-compose-operator.yml
@@ -2,6 +2,7 @@ services:
   # Base image containing dependencies.
   base:
     image: operator
+    container_name: operator
     build:
       context: ..
       dockerfile: docker/operator/Dockerfile
