--- a/docker/operator/Dockerfile
+++ b/docker/operator/Dockerfile
@@ -30,6 +30,9 @@ RUN /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash \
  && colcon build --symlink-install --event-handlers console_cohesion+\
  && rm -rf /var/lib/apt/lists/*"
 
+COPY ./docker/operator/zenoh.json5 /
+ENV ZENOH_ROUTER_CONFIG_URI=/zenoh.json5
+
 # Set up entrypoint
 COPY ./docker/operator/entrypoint.sh /
 ENTRYPOINT [ "/entrypoint.sh" ]
