Configure zenohd as router for both robot and operator that can talk to each other

--- a/docker/operator/zenoh.json5
+++ b/docker/operator/zenoh.json5
@@ -1,4 +1,10 @@
 {
+  mode: "router",
+  plugins: {
+    rest: {                        // activate and configure the REST plugin
+      http_port: 8000              // with HTTP server listening on port 8000
+    },
+  },
   connect: {
     endpoints: ["tcp/192.168.178.37:7447"],
   },
