--- a/docker/docker-compose-operator.yml
+++ b/docker/docker-compose-operator.yml
@@ -29,3 +29,4 @@ services:
       # Allows graphical programs in the container.
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ${XAUTHORITY:-$HOME/.Xauthority}:/root/.Xauthority
+    command: ros2 launch neato_operator teleop.launch.py
