Use newer ROS Jazzy images?

--- a/docker/operator/Dockerfile
+++ b/docker/operator/Dockerfile
@@ -10,18 +10,23 @@ RUN apt update && apt-get install -y --no-install-recommends \
         iputils-ping \
         netcat-traditional \
         vim \
+        curl \
     && rm -rf /var/lib/apt/lists/*
 
+#RUN export ROS_APT_SOURCE_VERSION=$(curl -s https://api.github.com/repos/ros-infrastructure/ros-apt-source/releases/latest | grep -F "tag_name" | awk -F\" '{print $4}')
+#RUN curl -L -o /tmp/ros2-apt-source.deb "https://github.com/ros-infrastructure/ros-apt-source/releases/download/${ROS_APT_SOURCE_VERSION}/ros2-apt-source_${ROS_APT_SOURCE_VERSION}.$(. /etc/os-release && echo ${UBUNTU_CODENAME:-${VERSION_CODENAME}})_all.deb"
+#RUN dpkg -i /tmp/ros2-apt-source.deb
+
 # Install rmw_zenoh
-RUN mv /etc/apt/sources.list.d/ros2-latest.list /etc/ros2.list
-RUN echo "deb [ signed-by=/usr/share/keyrings/ros2-latest-archive-keyring.gpg ] http://packages.ros.org/ros2-testing/ubuntu noble main" > /etc/apt/sources.list.d/ros2.list
-# temporarily as per https://docs.ros.org/en/jazzy/Installation/Testing.html#deb-testing-repository and
-# https://discourse.ros.org/t/rmw-zenoh-binaries-for-rolling-jazzy-and-humble/41395
+#RUN #mv /etc/apt/sources.list.d/ros2-latest.list /etc/ros2.list
+#RUN echo "deb [ signed-by=/usr/share/keyrings/ros2-latest-archive-keyring.gpg ] http://packages.ros.org/ros2-testing/ubuntu noble main" > /etc/apt/sources.list.d/ros2.list
+## temporarily as per https://docs.ros.org/en/jazzy/Installation/Testing.html#deb-testing-repository and
+## https://discourse.ros.org/t/rmw-zenoh-binaries-for-rolling-jazzy-and-humble/41395
 RUN apt update -qq && apt install -y --no-install-recommends \
       ros-${ROS_DISTRO}-rmw-zenoh-cpp \
       ros-${ROS_DISTRO}-teleop-twist-joy \
     && rm -rf /var/lib/apt/lists/*
-RUN mv /etc/ros2.list /etc/apt/sources.list.d/ros2-latest.list
+#RUN mv /etc/ros2.list /etc/apt/sources.list.d/ros2-latest.list
 
 # Configure Zenoh
 ENV RMW_IMPLEMENTATION=rmw_zenoh_cpp
