--- a/neato_operator/config/speedlink.yaml
+++ b/neato_operator/config/speedlink.yaml
@@ -1,29 +1,25 @@
-joystick_teleop:
+TeleopTwistJoy:
   ros__parameters:
     axis_angular:
-      pitch: -1
-      roll: -1
-      yaw: 3
+      yaw: 0
     axis_linear:
       x: 4
-      y: -1
-      z: -1
     enable_button: 5
     enable_turbo_button: 7
     scale_angular:
-      pitch: 0.0
-      roll: 0.0
-      yaw: 0.25
+      pitch: 1.0
+      roll: 1.0
+      yaw: 1.0
     scale_angular_turbo:
-      pitch: 0.0
-      roll: 0.0
+      pitch: 1.0
+      roll: 1.0
       yaw: 1.0
     scale_linear:
-      x: 0.25
-      y: 0.0
-      z: 0.0
+      x: 1.0
+      y: 1.0
+      z: 1.0
     scale_linear_turbo:
-      x: 0.5
-      y: 0.0
-      z: 0.0
+      x: 1.0
+      y: 1.0
+      z: 1.0
     use_sim_time: false
