--- a/docker/operator/zenoh.json5
+++ b/docker/operator/zenoh.json5
@@ -6,6 +6,6 @@
     },
   },
   connect: {
-    endpoints: ["tcp/192.168.1.114:7447"],
+    endpoints: ["tcp/raspberrypi-robot.local:7447"],
   },
 }
