Include twist_mux + config to combine virtual and real speedlink joystick into 1 cmd_vel topic

--- a/neato_operator/package.xml
+++ b/neato_operator/package.xml
@@ -12,6 +12,7 @@
   <depend>neato_description</depend>
   <depend>virtual_joystick</depend>
   <depend>joy</depend>
+  <depend>twist_mux</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
