--- a/docker/docker-compose-operator.yml
+++ b/docker/docker-compose-operator.yml
@@ -2,6 +2,8 @@ services:
   # Base image containing dependencies.
   base:
     image: operator
+    extra_hosts:
+      - "raspberrypi-robot.local:192.168.1.114"
     build:
       context: ..
       dockerfile: docker/operator/Dockerfile
